# aoc-2022

./: Cargo.toml  README.md
src/: common.rs  day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayX.rs  days.rs  lib.rs  main.rs
src/common/: fname.rs  stage.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  dayX.rs
