[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bitvec = "1.0.1"
itertools = "0.10.5"
parse-display = "0.7.0"

# tracing = "0.1.37"
# tracing-subscriber = "0.3.16"